--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jkdeers.activitygame">
 
     <application
@@ -9,21 +10,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Activitygame">
+        <activity android:name=".ui.StartActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
             </intent-filter>
         </activity>
         <activity
-            android:name="com.jkdeers.activitygame.Splash"
+            android:name=".Splash"
+            android:exported="true"
             android:label="ECO"
             android:screenOrientation="portrait"
-            android:exported="true"
             android:theme="@style/Theme.Wbm.Fullscreen">
+            <intent-filter>
+                <action
+                    android:name="android.intent.action.MAIN"
+                    android:screenOrientation="portrait" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".StartActivity"
+            android:exported="true"
+            android:label="ECO"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Wbm.Fullscreen"
+            tools:ignore="MissingClass">
             <intent-filter>
                 <action
                     android:name="android.intent.action.MAIN"
