--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,15 @@
     package="com.jkdeers.activitygame">
 
     <application
-        android:name="com.jkdeers.activitygame.activitygame"
+        android:name=".activitygame"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Signin">
-
-        </activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".Signin"></activity>
         <activity
             android:name=".StartActivity"
             android:exported="true"
