--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        configurations.all {
-            resolutionStrategy { force 'androidx.core:core:1.6.0' }
-        }
+//        configurations.all {
+//            resolutionStrategy { force 'androidx.core:core:1.6.0' }
+//        }
         applicationId "com.jkdeers.activitygame"
         minSdkVersion 26
         targetSdkVersion 31
