--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignUpActivity"></activity>
-        <activity android:name=".Signin"></activity>
+        <activity android:name=".ForgetPasswordActivity" android:theme="@style/AppTheme"></activity>
+        <activity android:name=".VerificationActivity" android:theme="@style/AppTheme" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".Signin" />
         <activity
             android:name=".StartActivity"
             android:exported="true"
@@ -32,9 +34,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Activitygame">
-
-        </activity>
+            android:theme="@style/Theme.Activitygame" />
     </application>
 
 </manifest>
