--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.jkdeers.activitygame">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -9,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".activitygame"
         android:allowBackup="true"
@@ -17,9 +19,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ForgetPasswordActivity" android:theme="@style/AppTheme"></activity>
-        <activity android:name=".VerificationActivity" android:theme="@style/AppTheme" />
-        <activity android:name=".SignUpActivity"  />
+        <activity android:name=".RegisterSchool"></activity>
+        <activity android:name=".registration" />
+        <activity
+            android:name=".ForgetPasswordActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".VerificationActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".SignUpActivity" />
         <activity android:name=".Signin" />
         <activity
             android:name=".StartActivity"
